--- a/Liwc.ipynb
+++ b/Liwc.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,15 +82,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ",131,132,133,136\n",
-      "\n"
+      "0\n"
      ]
     }
    ],
@@ -100,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -129,13 +128,112 @@
        "'Negativo, Score:-1'"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "Score_sentimento('Mercados em boa expansão na sessão de hoje, mesmo com indicadores ruins anunciados no mundo.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "today = now.strftime(\"%Y-%m-%d\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# INFOMONEY\n",
+    "with open('C:/Users/vitor/Documents/GetDataset/Infomoney/'+ today +'/dataset.csv', encoding=\"utf8\") as csvfile:\n",
+    "    reader = csv.reader(csvfile)\n",
+    "    next(reader)\n",
+    "    dataInfomoney = [r for r in reader]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('C:/Users/vitor/Documents/GetDataset/Infomoney/'+ today +'/polarityLiwc.csv', mode='w', encoding=\"utf8\") as employee_file:\n",
+    "    employee_writer = csv.writer(employee_file, delimiter=',', quotechar='\"', quoting=csv.QUOTE_MINIMAL)    \n",
+    "    for lista2 in dataInfomoney:\n",
+    "        try:\n",
+    "            x = Score_sentimento(lista2[2])\n",
+    "            x = str(x)\n",
+    "            employee_writer.writerow([lista2[2], x])\n",
+    "        except IndexError:\n",
+    "            x = 'null'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# INVESTING.COM\n",
+    "with open('C:/Users/vitor/Documents/GetDataset/Investing.com/'+ today +'/dataset.csv', encoding=\"utf8\") as csvfile:\n",
+    "    reader = csv.reader(csvfile)\n",
+    "    next(reader)\n",
+    "    dataInvesting = [r for r in reader]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('C:/Users/vitor/Documents/GetDataset/Investing.com/'+ today +'/polarityLiwc.csv', mode='w', encoding=\"utf8\") as employee_file:\n",
+    "    employee_writer = csv.writer(employee_file, delimiter=',', quotechar='\"', quoting=csv.QUOTE_MINIMAL)    \n",
+    "    for lista1 in dataInvesting:\n",
+    "        try:\n",
+    "            x = Score_sentimento(lista1[2])\n",
+    "            x = str(x)\n",
+    "            employee_writer.writerow([lista1[2], x])\n",
+    "        except IndexError:\n",
+    "            x = 'null'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# -- TRADING VIEW --------------------------------------------------------------------------------------------------\n",
+    "with open('C:/Users/vitor/Documents/GetDataset/TradingView/'+ today +'/dataset.csv', encoding=\"utf8\") as csvfile:\n",
+    "    reader = csv.reader(csvfile)\n",
+    "    next(reader)\n",
+    "    dataTrading = [r for r in reader]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('C:/Users/vitor/Documents/GetDataset/TradingView/'+ today +'/polarityLiwc.csv', mode='w', encoding=\"utf8\") as employee_file:\n",
+    "    employee_writer = csv.writer(employee_file, delimiter=',', quotechar='\"', quoting=csv.QUOTE_MINIMAL)    \n",
+    "    for lista in dataTrading:\n",
+    "        try:\n",
+    "            x = Score_sentimento(lista[2])\n",
+    "            x = str(x)\n",
+    "            employee_writer.writerow([lista[2], x])\n",
+    "        except IndexError:\n",
+    "            x = 'null'"
    ]
   },
   {
