--- a/Liwc.ipynb
+++ b/Liwc.ipynb
@@ -84,23 +84,6 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(dic_palavra.get('comprova'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
    "outputs": [],
    "source": [
     "def Score_sentimento(frase):\n",
@@ -119,27 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Negativo, Score:-1'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Score_sentimento('Mercados em boa expansão na sessão de hoje, mesmo com indicadores ruins anunciados no mundo.')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,6 +197,117 @@
     "            employee_writer.writerow([lista[2], x])\n",
     "        except IndexError:\n",
     "            x = 'null'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total:  1224\n",
+      "Postivos:  16\n",
+      "Neutros:  158\n",
+      "Negativos:  454\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Resultados TradingView\n",
+    "r_tradingview = open('C:/Users/vitor/Documents/GetDataset/TradingView/'+ today +'/polarityLiwc.csv', 'r', encoding='utf8')\n",
+    "count = 0\n",
+    "pos = 0\n",
+    "neu = 0\n",
+    "neg = 0\n",
+    "for t in r_tradingview.readlines():\n",
+    "    count += 1\n",
+    "    if 'Positivo' in t:\n",
+    "        pos += 1\n",
+    "    if 'Neutro' in t:\n",
+    "        neu += 1\n",
+    "    if 'Negativo' in t:\n",
+    "        neg += 1\n",
+    "print(\"Total: \",count)\n",
+    "print(\"Postivos: \",pos)\n",
+    "print(\"Neutros: \",neu)\n",
+    "print(\"Negativos: \",neg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total:  2614\n",
+      "Postivos:  0\n",
+      "Neutros:  966\n",
+      "Negativos:  341\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Resultados InfoMoney\n",
+    "r_infomoney = open('C:/Users/vitor/Documents/GetDataset/Infomoney/'+ today +'/polarityLiwc.csv', 'r', encoding='utf8')\n",
+    "count = 0\n",
+    "pos = 0\n",
+    "neu = 0\n",
+    "neg = 0\n",
+    "for t in r_infomoney.readlines():\n",
+    "    count += 1\n",
+    "    if 'Positivo' in t:\n",
+    "        pos += 1\n",
+    "    if 'Neutro' in t:\n",
+    "        neu += 1\n",
+    "    if 'Negativo' in t:\n",
+    "        neg += 1\n",
+    "print(\"Total: \",count)\n",
+    "print(\"Postivos: \",pos)\n",
+    "print(\"Neutros: \",neu)\n",
+    "print(\"Negativos: \",neg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total:  198\n",
+      "Postivos:  0\n",
+      "Neutros:  62\n",
+      "Negativos:  37\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Resultados Investing.com\n",
+    "r_investing = open('C:/Users/vitor/Documents/GetDataset/Investing.com/'+ today +'/polarityLiwc.csv', 'r', encoding='utf8')\n",
+    "count = 0\n",
+    "pos = 0\n",
+    "neu = 0\n",
+    "neg = 0\n",
+    "for t in r_investing.readlines():\n",
+    "    count += 1\n",
+    "    if 'Positivo' in t:\n",
+    "        pos += 1\n",
+    "    if 'Neutro' in t:\n",
+    "        neu += 1\n",
+    "    if 'Negativo' in t:\n",
+    "        neg += 1\n",
+    "print(\"Total: \",count)\n",
+    "print(\"Postivos: \",pos)\n",
+    "print(\"Neutros: \",neu)\n",
+    "print(\"Negativos: \",neg)"
    ]
   },
   {
