--- a/Liwc.ipynb
+++ b/Liwc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,28 +43,29 @@
    "outputs": [],
    "source": [
     "import datetime\n",
-    "now = datetime.datetime.now()"
+    "now = datetime.datetime.now()\n",
+    "today = now.strftime(\"%Y-%m-%d\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "liwc = open('C:\\\\Users\\\\vitor\\\\Documents\\\\Python Projects\\\\SentiLexFinancial\\\\Lexicon\\\\Liwc\\\\liwc_pt.txt', 'r')\n",
+    "liwc = open('Lexicon/Liwc/liwc_pt.txt', 'r')\n",
     "count = 0\n",
     "for line in liwc.readlines(): count += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "dic_palavra = {}\n",
-    "liwc = open('C:\\\\Users\\\\vitor\\\\Documents\\\\Python Projects\\\\SentiLexFinancial\\\\Lexicon\\\\Liwc\\\\liwc_pt.txt', 'r')\n",
+    "liwc = open('Lexicon/Liwc/liwc_pt.txt', 'r')\n",
     "pol = {}\n",
     "for line in itertools.islice(liwc, 67, count):\n",
     "    pos_ponto = line.replace('\\t',',')\n",
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,21 +103,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "today = now.strftime(\"%Y-%m-%d\")"
+    "stemmer = nltk.stem.RSLPStemmer()\n",
+    "def Score_sentimento_Stemming(frase):\n",
+    "    frase = frase.lower()\n",
+    "    l_sentimento = []\n",
+    "    for p in frase.split():\n",
+    "        l_sentimento.append(int(dic_palavra.get(stemmer.stem(p), 0)))\n",
+    "    score = sum(l_sentimento)\n",
+    "    if score > 0:\n",
+    "        return 'Positivo, Score:{}'.format(score)\n",
+    "    elif score == 0:\n",
+    "        return 'Neutro, Score:{}'.format(score)\n",
+    "    else:\n",
+    "        return 'Negativo, Score:{}'.format(score)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dInfoMoney = 'C:/Users/vitor/Documents/GetDataset/Infomoney/'\n",
+    "dInvesting = 'C:/Users/vitor/Documents/GetDataset/Investing.com/'\n",
+    "dTrading = 'C:/Users/vitor/Documents/GetDataset/TradingView/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# INFOMONEY\n",
-    "with open('C:/Users/vitor/Documents/GetDataset/Infomoney/'+ today +'/dataset.csv', encoding=\"utf8\") as csvfile:\n",
+    "with open(dInfoMoney + today +'/dataset.csv', encoding=\"utf8\") as csvfile:\n",
     "    reader = csv.reader(csvfile)\n",
     "    next(reader)\n",
     "    dataInfomoney = [r for r in reader]"
@@ -124,11 +148,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('C:/Users/vitor/Documents/GetDataset/Infomoney/'+ today +'/polarityLiwc.csv', mode='w', encoding=\"utf8\") as employee_file:\n",
+    "with open(dInfoMoney + today +'/polarityLiwc.csv', mode='w', encoding=\"utf8\") as employee_file:\n",
     "    employee_writer = csv.writer(employee_file, delimiter=',', quotechar='\"', quoting=csv.QUOTE_MINIMAL)    \n",
     "    for lista2 in dataInfomoney:\n",
     "        try:\n",
@@ -141,12 +165,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(dInfoMoney + today +'/polarityLiwcStemming.csv', mode='w', encoding=\"utf8\") as employee_file:\n",
+    "    employee_writer = csv.writer(employee_file, delimiter=',', quotechar='\"', quoting=csv.QUOTE_MINIMAL)    \n",
+    "    for lista2 in dataInfomoney:\n",
+    "        try:\n",
+    "            x = Score_sentimento_Stemming(lista2[2])\n",
+    "            x = str(x)\n",
+    "            employee_writer.writerow([lista2[2], x])\n",
+    "        except IndexError:\n",
+    "            x = 'null'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "# INVESTING.COM\n",
-    "with open('C:/Users/vitor/Documents/GetDataset/Investing.com/'+ today +'/dataset.csv', encoding=\"utf8\") as csvfile:\n",
+    "with open(dInvesting + today +'/dataset.csv', encoding=\"utf8\") as csvfile:\n",
     "    reader = csv.reader(csvfile)\n",
     "    next(reader)\n",
     "    dataInvesting = [r for r in reader]"
@@ -154,11 +195,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('C:/Users/vitor/Documents/GetDataset/Investing.com/'+ today +'/polarityLiwc.csv', mode='w', encoding=\"utf8\") as employee_file:\n",
+    "with open(dInvesting + today +'/polarityLiwc.csv', mode='w', encoding=\"utf8\") as employee_file:\n",
     "    employee_writer = csv.writer(employee_file, delimiter=',', quotechar='\"', quoting=csv.QUOTE_MINIMAL)    \n",
     "    for lista1 in dataInvesting:\n",
     "        try:\n",
@@ -171,12 +212,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(dInvesting + today +'/polarityLiwcStemming.csv', mode='w', encoding=\"utf8\") as employee_file:\n",
+    "    employee_writer = csv.writer(employee_file, delimiter=',', quotechar='\"', quoting=csv.QUOTE_MINIMAL)    \n",
+    "    for lista1 in dataInvesting:\n",
+    "        try:\n",
+    "            x = Score_sentimento_Stemming(lista1[2])\n",
+    "            x = str(x)\n",
+    "            employee_writer.writerow([lista1[2], x])\n",
+    "        except IndexError:\n",
+    "            x = 'null'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# -- TRADING VIEW --------------------------------------------------------------------------------------------------\n",
-    "with open('C:/Users/vitor/Documents/GetDataset/TradingView/'+ today +'/dataset.csv', encoding=\"utf8\") as csvfile:\n",
+    "with open(dTrading + today +'/dataset.csv', encoding=\"utf8\") as csvfile:\n",
     "    reader = csv.reader(csvfile)\n",
     "    next(reader)\n",
     "    dataTrading = [r for r in reader]"
@@ -184,11 +242,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('C:/Users/vitor/Documents/GetDataset/TradingView/'+ today +'/polarityLiwc.csv', mode='w', encoding=\"utf8\") as employee_file:\n",
+    "with open(dTrading + today +'/polarityLiwc.csv', mode='w', encoding=\"utf8\") as employee_file:\n",
     "    employee_writer = csv.writer(employee_file, delimiter=',', quotechar='\"', quoting=csv.QUOTE_MINIMAL)    \n",
     "    for lista in dataTrading:\n",
     "        try:\n",
@@ -201,16 +259,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(dTrading + today +'/polarityLiwcStemming.csv', mode='w', encoding=\"utf8\") as employee_file:\n",
+    "    employee_writer = csv.writer(employee_file, delimiter=',', quotechar='\"', quoting=csv.QUOTE_MINIMAL)    \n",
+    "    for lista in dataTrading:\n",
+    "        try:\n",
+    "            x = Score_sentimento_Stemming(lista[2])\n",
+    "            x = str(x)\n",
+    "            employee_writer.writerow([lista[2], x])\n",
+    "        except IndexError:\n",
+    "            x = 'null'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total:  1224\n",
+      "Total:  1222\n",
       "Postivos:  16\n",
-      "Neutros:  158\n",
+      "Neutros:  157\n",
       "Negativos:  454\n"
      ]
     }
@@ -218,6 +293,43 @@
    "source": [
     "# Resultados TradingView\n",
     "r_tradingview = open('C:/Users/vitor/Documents/GetDataset/TradingView/'+ today +'/polarityLiwc.csv', 'r', encoding='utf8')\n",
+    "count = 0\n",
+    "pos = 0\n",
+    "neu = 0\n",
+    "neg = 0\n",
+    "for t in r_tradingview.readlines():\n",
+    "    count += 1\n",
+    "    if 'Positivo' in t:\n",
+    "        pos += 1\n",
+    "    if 'Neutro' in t:\n",
+    "        neu += 1\n",
+    "    if 'Negativo' in t:\n",
+    "        neg += 1\n",
+    "print(\"Total: \",count)\n",
+    "print(\"Postivos: \",pos)\n",
+    "print(\"Neutros: \",neu)\n",
+    "print(\"Negativos: \",neg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total:  1222\n",
+      "Postivos:  16\n",
+      "Neutros:  553\n",
+      "Negativos:  69\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Resultados TradingView\n",
+    "r_tradingview = open('C:/Users/vitor/Documents/GetDataset/TradingView/'+ today +'/polarityLiwcStemming.csv', 'r', encoding='utf8')\n",
     "count = 0\n",
     "pos = 0\n",
     "neu = 0\n",
@@ -275,6 +387,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total:  2614\n",
+      "Postivos:  0\n",
+      "Neutros:  1260\n",
+      "Negativos:  47\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Resultados InfoMoney\n",
+    "r_infomoney = open('C:/Users/vitor/Documents/GetDataset/Infomoney/'+ today +'/polarityLiwcStemming.csv', 'r', encoding='utf8')\n",
+    "count = 0\n",
+    "pos = 0\n",
+    "neu = 0\n",
+    "neg = 0\n",
+    "for t in r_infomoney.readlines():\n",
+    "    count += 1\n",
+    "    if 'Positivo' in t:\n",
+    "        pos += 1\n",
+    "    if 'Neutro' in t:\n",
+    "        neu += 1\n",
+    "    if 'Negativo' in t:\n",
+    "        neg += 1\n",
+    "print(\"Total: \",count)\n",
+    "print(\"Postivos: \",pos)\n",
+    "print(\"Neutros: \",neu)\n",
+    "print(\"Negativos: \",neg)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [
@@ -292,6 +441,43 @@
    "source": [
     "# Resultados Investing.com\n",
     "r_investing = open('C:/Users/vitor/Documents/GetDataset/Investing.com/'+ today +'/polarityLiwc.csv', 'r', encoding='utf8')\n",
+    "count = 0\n",
+    "pos = 0\n",
+    "neu = 0\n",
+    "neg = 0\n",
+    "for t in r_investing.readlines():\n",
+    "    count += 1\n",
+    "    if 'Positivo' in t:\n",
+    "        pos += 1\n",
+    "    if 'Neutro' in t:\n",
+    "        neu += 1\n",
+    "    if 'Negativo' in t:\n",
+    "        neg += 1\n",
+    "print(\"Total: \",count)\n",
+    "print(\"Postivos: \",pos)\n",
+    "print(\"Neutros: \",neu)\n",
+    "print(\"Negativos: \",neg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total:  198\n",
+      "Postivos:  0\n",
+      "Neutros:  97\n",
+      "Negativos:  2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Resultados Investing.com\n",
+    "r_investing = open('C:/Users/vitor/Documents/GetDataset/Investing.com/'+ today +'/polarityLiwcStemming.csv', 'r', encoding='utf8')\n",
     "count = 0\n",
     "pos = 0\n",
     "neu = 0\n",
@@ -334,7 +520,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
