--- a/ResultSentiLex.ipynb
+++ b/ResultSentiLex.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,25 +166,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Dados Plot\n",
-    "n_groups = 3\n",
-    "m_pos = (posInv, posInf, posTrd)\n",
-    "m_neu = (neuInv, neuInf, neuTrd)\n",
-    "m_neg = (negInv, negInf, negTrd)"
+    "# n_groups = 3\n",
+    "# m_pos = (posInv, posInf, posTrd)\n",
+    "# m_neu = (neuInv, neuInf, neuTrd)\n",
+    "# m_neg = (negInv, negInf, negTrd)"
    ]
   },
   {
@@ -194,22 +194,22 @@
    "outputs": [],
    "source": [
     "# Create Plot\n",
-    "fig, ax = plt.subplots()\n",
-    "index = np.arange(n_groups)\n",
-    "bar_width = 0.35\n",
-    "opacity = 0.8\n",
-    "rects1 = plt.bar(index, m_pos, bar_width,\n",
-    "                alpha=opacity,\n",
-    "                color='g',\n",
-    "                label='Positivos')\n",
-    "rects2 = plt.bar(index, m_neu, bar_width,\n",
-    "                alpha=opacity,\n",
-    "                color='b',\n",
-    "                label='Neutros')\n",
-    "rects3 = plt.bar(index, m_beg, bar_width,\n",
-    "                alpha=opacity,\n",
-    "                color='y',\n",
-    "                label='Negativos')"
+    "# fig, ax = plt.subplots()\n",
+    "# index = np.arange(n_groups)\n",
+    "# bar_width = 0.35\n",
+    "# opacity = 0.8\n",
+    "# rects1 = plt.bar(index, m_pos, bar_width,\n",
+    "#                 alpha=opacity,\n",
+    "#                 color='g',\n",
+    "#                 label='Positivos')\n",
+    "# rects2 = plt.bar(index, m_neu, bar_width,\n",
+    "#                 alpha=opacity,\n",
+    "#                 color='b',\n",
+    "#                 label='Neutros')\n",
+    "# rects3 = plt.bar(index, m_beg, bar_width,\n",
+    "#                 alpha=opacity,\n",
+    "#                 color='y',\n",
+    "#                 label='Negativos')"
    ]
   },
   {
@@ -218,13 +218,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.xlabel('Textos')\n",
-    "plt.ylabel('Nº de Textos')\n",
-    "plt.title('Polaridade de textos')\n",
-    "plt.xticks(index + bar_width, ('Investing', 'InfoMoney', 'TradingView'))\n",
-    "plt.legend()\n",
+    "# plt.xlabel('Textos')\n",
+    "# plt.ylabel('Nº de Textos')\n",
+    "# plt.title('Polaridade de textos')\n",
+    "# plt.xticks(index + bar_width, ('Investing', 'InfoMoney', 'TradingView'))\n",
+    "# plt.legend()\n",
     " \n",
-    "plt.tight_layout()\n",
+    "# plt.tight_layout()\n",
+    "# plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "# Initialize the plot\n",
+    "fig = plt.figure()\n",
+    "ax1 = fig.add_subplot(131)\n",
+    "ax2 = fig.add_subplot(132)\n",
+    "ax3 = fig.add_subplot(133)\n",
+    "\n",
+    "# Plot the data\n",
+    "ax1.bar([1,2,3],[3,4,5])\n",
+    "ax2.barh([0.5,1,2.5],[0,1,2])\n",
+    "ax2.axhline(0.45)\n",
+    "ax1.axvline(0.65)\n",
+    "ax3.scatter(np.linspace(0, 1, 5), np.linspace(0, 5, 5))\n",
+    "\n",
+    "# Delete `ax3`\n",
+    "fig.delaxes(ax3)\n",
+    "\n",
+    "# Show the plot\n",
     "plt.show()"
    ]
   },
@@ -238,21 +267,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
